--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.11.4",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.6.0",
-    "popper.js": "^1.16.1",
+    "@material-ui/core": "latest",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.0",
+    "date-fns": "^2.24.0",
+    "jspdf": "^2.4.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.35.0",
+    "react-bootstrap": "^1.6.3",
+    "react-confirm-bootstrap": "^5.3.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "react-fontawesome": "^1.7.1",
+    "react-image-magnifiers": "^1.4.0",
+    "react-scripts": "4.0.3",
+    "react-to-print": "^2.13.0",
+    "react-typed": "^1.2.0",
+    "react-validation": "^3.0.7",
+    "validator": "^13.6.0",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +48,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "react-datepicker": "^4.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
