--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@material-ui/core": "latest",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
